<resources>
    <string name="app_name">Screen Off</string>
    <string name="receiver_label">Screen Off management tool</string>
    <string name="receiver_description">Screen Off management tool</string>
    <string name="add_admin_extra_app_text">Thanks for using Screen Off.\nBefore Screen Off turing off your screen, it requires the activiting of your Lock the screen function. Upon activation, the screen will be off immediately.\nLater on, you can long press the Screen Off to bring up app shortcut and select Settings to do further configuration.</string>
    <string name="settings_shortcut_short_label">Settings</string>
    <string name="app_settings_label">Screen Off settings</string>
    <string name="settings_message">Thanks for using Screen Off!\n\nPlease rate this app and help to improve it by leaving your message.\n\nIf you don\'t like it, your can press the uninstall button to uninstall.</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="btn_rate">Rate this app</string>
    <string name="toast_ready_to_remove">You can now remove the application.</string>
    <string name="qs_tile_label">Screen Off button</string>
    <string name="settings_how_to_1">1. Find the Screen Off app icon like this in your app list:</string>
    <string name="settings_how_to_2">2. Click on the Screen Off icon.\n3. For the first time click, we will need your approval to activate the Lock screen function.\n4. For the following clicks, the device screen will be turned off immediately.</string>
    <string name="settings_or">or</string>
    <string name="settings_how_to_title">How to use Screen Off:</string>
    <string name="btn_more">More</string>
</resources>
